--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ img:hover {
          <h1>ANU</h1>
     </div>
     <div>
-        <img src="WhatsApp Image 2021-06-04 at 8.38.53 PM (1).jpeg" alt="Anu" style="width: 618px;height: 358px;">
+        <img src="WhatsApp Image 2021-06-04 at 8.38.53 PM (1).jpeg" alt="My Ana" style="width: 618px;height: 358px;">
     </div>
     <h3 style="text-align: center; color: aliceblue;"> You may fall from the sky, you may fall from a tree, but the best way to fall… is in love with me.</h3>
     <h4 style="text-align: center; color: aliceblue;">LOVE U 3000</h4>
